force-app/main/default/objects/Unique_Pair__c/Unique_Pair__c.object-meta.xml
<CustomObject>
    <label>Unique Pair</label>
    <nameField>
        <displayFormat>UP-{00000}</displayFormat>
        <label>Unique Pair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unique Pairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>