force-app/main/default/objects/Unique_Pair__c/fields/Participant_1__c.field-meta.xml
<CustomField>
    <fullName>Participant_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant 1</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Unique Pairs (Participant 1)</relationshipLabel>
    <relationshipName>Unique_Pairs_1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>