force-app/main/default/objects/Unique_Pair__c/fields/Participant_2__c.field-meta.xml
<CustomField>
    <fullName>Participant_2__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant 2</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Unique Pairs (Participant 2)</relationshipLabel>
    <relationshipName>Unique_Pairs_2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>