force-app/main/default/objects/Unique_Pair__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Count__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Participant_1__c</columns>
    <columns>Participant_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>